# project-nrf-solix-f2000-mqtt

./: README.md  docker-compose.device.yml  docker-compose.yml  pyocd.yaml  west.yml
app/: CMakeLists.txt  Kconfig  app_version.h.in  ble.conf  home-assistant.conf  prj.conf  thread.conf
app/boards/: pink_panda.overlay
app/configuration/my_board/: buttons_def.h
app/src/: main.c  watchdog.c  watchdog.h
